--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,2 +1,7 @@
 FROM nginx
+
+EXPOSE 3001
+
 COPY ./default.conf /etc/nginx/conf.d/default.conf
+
+COPY --from=builder /app/build  /usr/share/nginx/html
