fix(CM): #S08P31A306-302 front blue/green dep setting

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,8 @@ services:
     restart: always
     container_name: nginx
     build:
-      context: ./nginx
+      # context: ./nginx
+      context: ./front-end
       dockerfile: Dockerfile
     #
     volumes:
