--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,8 +30,8 @@ services:
     restart: always
     container_name: nginx
     build:
-      # context: ./nginx
-      context: ./front-end
+      context: ./nginx
+      # context: ./front-end
       dockerfile: Dockerfile
     #
     volumes:
