--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -31,22 +31,21 @@ services:
       - EMAIL_USERNAME=${EMAIL_USERNAME}
       - EMAIL_PASSWORD=${EMAIL_PASSWORD}
 
-    networks:
-      - back-network
+    # networks:
+    #   - back-network
 
-  nginx-back:
-    restart: always
-    container_name: nginx-back
-    # volumes:
-    # - ./nginx/:/etc/nginx/conf.d/
-    # - ./nginx/service-url.inc:/etc/nginx/conf.d/service-url.inc
-    # - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-    build:
-      context: ./nginx
-      dockerfile: Dockerfile
-    networks:
-      - back-network
-
-networks:
-  back-network:
-    driver: bridge
+  # nginx-back:
+  #   restart: always
+  #   container_name: nginx-back
+  #   # volumes:
+  #   # - ./nginx/:/etc/nginx/conf.d/
+  #   # - ./nginx/service-url.inc:/etc/nginx/conf.d/service-url.inc
+  #   # - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+  #   build:
+  #     context: ./nginx
+  #     dockerfile: Dockerfile
+  #   networks:
+  #     - back-network
+# networks:
+#   back-network:
+#     driver: bridge
