--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,7 @@
-upstream frontend {
-    ##
-    # server frontend:3000;
-    server frontend:3001;
+upstream docker-app {
+    least_conn;
+    server k8a306.p.ssafy.io:3002 weight=10 max_fails=3 fail_timeout=30s;
+    server k8a306.p.ssafy.io:3003 weight=10 max_fails=3 fail_timeout=30s;
 }
 
 server {
@@ -47,8 +47,26 @@ server {
 
     
 # # nginx 세팅
+    # location / {        
+    #     proxy_pass http://frontend;
+    # }
+
     location / {        
-        proxy_pass http://frontend;
+        proxy_pass http://docker-app;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto http;
+        proxy_max_temp_file_size 0;
+
+        proxy_connect_timeout 150;
+        proxy_send_timeout 100;
+        proxy_read_timeout 100;
+
+        proxy_buffer_size 8k;
+        proxy_buffers 4 32k;
+        proxy_busy_buffers_size 64k;
+        proxy_temp_file_write_size 64k;
     }
 
 # # nginx 세팅
@@ -69,19 +87,3 @@ server {
   }
 }
 
-###################################
-server {
-        listen 9090 default_server;
-  		# 1번에서 작성한 파일을 불러온다.
-        include /etc/nginx/conf.d/service-url.inc;
-        server_name rough-code.com;
-        charset utf-8;
-
-        location / {
-            #9090포트가 패스할 url 1번에서 작성한 파일의 변수를 프록시패스로 설정
-            proxy_pass      $service_url;
-            proxy_set_header        X-Real-Ip $remote_addr;
-            proxy_set_header        x-Forwarded-For $proxy_add_x_forwarded_$
-            proxy_set_header        Host $host;
-        }
-}
