refactor(BE): #S08P31A306-343 set custom redirect uri

--- a/back-end/roughcode/src/main/resources/application.yml
+++ b/back-end/roughcode/src/main/resources/application.yml
@@ -24,6 +24,7 @@ spring:
           github:
             client-id: ${OAUTH2_CLIENT_ID}
             client-secret: ${OAUTH2_CLIENT_SECRET}
+            redirect-uri: "{baseScheme}://{baseHost}/api/v1/login/oauth2/code/{registrationId}"
   redis:
     host: ${HOST}
     port: 6379
