fix(FE): #S08P31A306-329 fix project update page

--- a/front-end/.vscode/settings.json
+++ b/front-end/.vscode/settings.json
@@ -3,5 +3,8 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
   },
-  "eslint.packageManager": "pnpm"
+  "eslint.packageManager": "pnpm",
+  "path-intellisense.mappings": {
+    "@": "${workspaceFolder}/src"
+  }
 }
