--- a/back-end/roughcode/build.gradle
+++ b/back-end/roughcode/build.gradle
@@ -126,10 +126,15 @@ test {
 }
 
 jacocoTestReport {
-    reports {
+    dependsOn test
+    reports{
         html.enabled false
         csv.enabled false
         xml.enabled true
+
+        xml.destination file("${buildDir}/jacoco/jacoco.xml")
     }
+
+
     finalizedBy 'jacocoTestCoverageVerification' // 커버리지 작동 이후 검증하도록 설정
 }
