fix(CM): #S08P31A306-379 fix jacoco-report in build.gradle

--- a/back-end/roughcode/build.gradle
+++ b/back-end/roughcode/build.gradle
@@ -132,7 +132,7 @@ jacocoTestReport {
         csv.enabled false
         xml.enabled true
 
-        xml.destination file("/${buildDir}/jacoco/jacoco.xml")
+        xml.destination file("../jacoco/jacoco.xml")
     }
 
 
